# AI_drone_contest

Code/: pyproject.toml
Code/files/: competition_day_guide.py  enjoy_ai_drone_mission.py  test_functions.py
대회_계획서/: 제3회 국제 AI드론 경진대회 참가신청서 및 개인정보 동의서.hwpx  제3회 국제 창의 AI드론 경진대회 가산점(지식재산).hwp
지식재산/: AI드론_지식재산_미세플라스틱 탐지·수거 드론.docx  지식재산권_양식.docx
