[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djitellopy>=2.5.0",
    "e-drone>=22.6.2",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyserial>=3.5",
    "pyzbar>=0.1.9",
]
